
* added a new SubnetSplitter class for those looking to divide up subnets.
  Thanks alanwill and RyPeck and those on (Stack Overflow discussion).

* removed bundled pytest dependency code for "python setup.py test".

* setup.py now uses setuptools only (no more distutils) and setup_egg.py removed.

* cleaned up INSTALL docs so they accurately reflect current Python packaging.

^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Specific bug fixes addressed in this release
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

FIXED Issue 133: https://github.com/drkjam/netaddr/issues/133
    - Splitting a single network into multiple prefixed networks

FIXED Issue 129: https://github.com/drkjam/netaddr/issues/129
    - fix IPAddress().netmask_bits to return 0 for 0.0.0.0 and [::] addresses

FIXED Issue 117: https://github.com/drkjam/netaddr/issues/117
    - (python setup.py test) failing with python3 >= 3.5

FIXED Issue 137: https://github.com/drkjam/netaddr/issues/137
    - API reference is broken on ReadTheDocs

FIXED Issue 143: https://github.com/drkjam/netaddr/issues/143
    - Please refresh the bundled IANA and IEEE databases

^^^^^^^^^^^
Miscellanea
^^^^^^^^^^^

- Goodbye to NYSE Euronext (good times), hello Intercontinental Exchange ...

---------------
Release: 0.7.18
---------------
Date: 4 Sep 2015

^^^^^^^^^^^^^^^^^^^^
Changes since 0.7.17
^^^^^^^^^^^^^^^^^^^^

* cidr_merge() algorithm is now O(n) and much faster.
  Thanks to Anand Buddhdev (aabdnn) and Stefan Nordhausen (snordhausen).

* nmap target specification now fully supported including IPv4 CIDR
  prefixes and IPv6 addresses.

^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Specific bug fixes addressed in this release
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

FIXED Issue 100: https://github.com/drkjam/netaddr/issues/100
    - nmap.py - CIDR targets

FIXED Issue 112: https://github.com/drkjam/netaddr/issues/112
    - Observation: netaddr slower under pypy

---------------
Release: 0.7.17
---------------