@@ -136,9 +136,9 @@ Here is how you query an OUI with the EUI interface.
 >>> oui
 OUI('00-1B-77')
 >>> oui.registration().address
-['Lot 8, Jalan Hi-Tech 2/3', 'Kulim  Kedah  09000', 'MY']
+[u'Lot 8, Jalan Hi-Tech 2/3', u'Kulim  Kedah  09000', u'MY']
 >>> oui.registration().org
-'Intel Corporate'
+u'Intel Corporate'
 
 You can also use OUI objects directly without going through the EUI interface.
 
@@ -150,29 +150,29 @@ This example shows you how you access them individually by specifying an index n
 >>> oui
 OUI('08-00-30')
 >>> oui.registration(0).address
-['2380 N. ROSE AVENUE', 'OXNARD  CA  93010', 'US']
+[u'2380 N. ROSE AVENUE', u'OXNARD  CA  93010', u'US']
 >>> oui.registration(0).org
-'NETWORK RESEARCH CORPORATION'
+u'NETWORK RESEARCH CORPORATION'
 >>> oui.registration(0).oui
 '08-00-30'
 >>> oui.registration(1).address
-['GPO BOX 2476V', 'MELBOURNE  VIC  3001', 'AU']
+[u'GPO BOX 2476V', u'MELBOURNE  VIC  3001', u'AU']
 >>> oui.registration(1).org
-'ROYAL MELBOURNE INST OF TECH'
+u'ROYAL MELBOURNE INST OF TECH'
 >>> oui.registration(1).oui
 '08-00-30'
 >>> oui.registration(2).address
-['CH-1211 GENEVE 23', 'SUISSE/SWITZ', 'CH']
+[u'CH-1211 GENEVE 23', u'SUISSE/SWITZ', u'CH']
 >>> oui.registration(2).org
-'CERN'
+u'CERN'
 >>> oui.registration(2).oui
 '08-00-30'
 >>> for i in range(oui.reg_count):
 ...     str(oui), oui.registration(i).org
 ...
-('08-00-30', 'NETWORK RESEARCH CORPORATION')
-('08-00-30', 'ROYAL MELBOURNE INST OF TECH')
-('08-00-30', 'CERN')
+('08-00-30', u'NETWORK RESEARCH CORPORATION')
+('08-00-30', u'ROYAL MELBOURNE INST OF TECH')
+('08-00-30', u'CERN')
 
 Here is how you query an IAB with the EUI interface.
 
@@ -183,9 +183,9 @@ True
 >>> iab
 IAB('00-50-C2-00-00-00')
 >>> iab.registration()
-{'address': ['1241 Superieor Ave E', 'Cleveland  OH  44114', 'US'],
+{'address': [u'1241 Superieor Ave E', u'Cleveland  OH  44114', u'US'],
  'iab': '00-50-C2-00-00-00',
  'idx': 84680704,
  ...
- 'org': 'T.L.S. Corp.',
+ 'org': u'T.L.S. Corp.',
  'size': 537}
